<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ForgetPasswordSuccessMessage">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:src="@drawable/close_icon"
            app:tint="@color/black">
        </ImageView>
        <Button
            android:id="@+id/signup_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/material_on_surface_stroke"
            android:onClick="callBack">

        </Button>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:gravity="center"
            android:text="@string/password_updated"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="38sp" />


        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_check_circle_24" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/password_update_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/black"
            android:onClick="backToLogin"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>