<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp"
    tools:context=".ForgetPassword">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@drawable/close_icon"
                app:tint="@color/black">

            </ImageView>

            <Button
                android:id="@+id/signup_back_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/material_on_surface_stroke"
                android:onClick="callBack">

            </Button>

        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:src="@drawable/ic_outline_lock_24"
            app:tint="@color/black">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forget_password_txt"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="38sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/forget_password_desc"
            android:textAlignment="center"
            android:textSize="18sp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/f_ph_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginTop="40dp"
            android:hint="@string/enter_phone_number"

            android:inputType="number"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/lightWhite"
            app:boxStrokeColor="@color/black"


            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/general_phone"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next1_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:elevation="5dp"
            android:onClick="callNextScreen"
            android:text="@string/next_btn"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:transitionName="transition_next_button">

        </Button>

        <RelativeLayout
            android:id="@+id/fp_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/white_circle"
            android:elevation="8dp"
            android:padding="15dp"
            android:visibility="invisible">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:layout_marginRight="300dp">

            </ProgressBar>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>