<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:transitionName="transition_Login"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/layout"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/login_back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:transitionName="transition_back_button" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/material_on_surface_stroke"
                    android:onClick="callBack">

                </Button>

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:transitionName="transition_crrate_button" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="25dp"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:hint="@string/enter_phone_number"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/general_phone"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_phone_No_editTExt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"


                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_number"
                android:hint="@string/enter_password"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"


                app:startIconDrawable="@drawable/general_password"
                app:startIconTint="@color/black">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_editTExt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"

                    android:textColor="@color/black"
                    app:endIconTint="@color/black"

                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black" />


            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/forget_password_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_marginTop="10dp">


                <CheckBox
                    android:id="@+id/rememberMe"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/black"
                    android:text="@string/remember_me"
                    android:checked="true"
                    android:textColor="@color/black" />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="#00000000"
                    android:onClick="callForgetPassword"
                    android:text="@string/forget_password"
                    android:textColor="@color/black" />


            </RelativeLayout>


            <Button
                android:id="@+id/letTheUserLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forget_password_block"
                android:layout_marginTop="25dp"
                android:background="@color/black"
                android:onClick="letTheUserLoggedIn"
                android:text="@string/login"
                android:textColor="@color/white" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/letTheUserLogIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="#00000000"
                android:onClick="callSignUpFromLogin"
                android:text="@string/create_account"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/login_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/white_circle"
                android:elevation="8dp"
                android:padding="15dp"
                android:visibility="invisible">

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true">

                </ProgressBar>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>