<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Complaints">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/complaint_back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:transitionName="transition_back_button" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/material_on_surface_stroke"
                    android:onClick="callBack">

                </Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/complaint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/complaints"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:transitionName="transition_crrate_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:padding="5dp"
                android:src="@drawable/complaint"
                app:tint="@color/black">

            </ImageView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="75dp"
                android:onClick="addNewComplaint"
                android:text="@string/add_new_complaints"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@color/black"
                app:cornerRadius="16dp"
                app:elevation="5dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                android:onClick="viewExistingComplaints"
                android:text="@string/view_exist_complaints"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:backgroundTint="@color/black"
                app:cornerRadius="16dp"
                app:elevation="5dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>


    </LinearLayout>

</ScrollView>