<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddComplaint">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@drawable/layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/add_complaint_back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:transitionName="transition_back_button" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/material_on_surface_stroke"
                    android:onClick="callBack">

                </Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/add_complaint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/add_new_complaints_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:transitionName="transition_crrate_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:padding="22dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_complaint_title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/c_title"
                    android:drawableTint="@color/black"
                    android:hint="@string/c_title"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@color/black"
                    app:boxStrokeWidthFocused="2dp"

                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/complaint_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"


                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/c_description"
                    android:drawableTint="@color/black"
                    android:hint="@string/c_desc"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@color/black"

                    app:boxStrokeWidthFocused="2dp"

                    >

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:inputType="textMultiLine"
                android:onClick="submitComplaints"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:backgroundTint="@color/black"
                app:cornerRadius="16dp"
                app:elevation="5dp">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>


    </LinearLayout>

</ScrollView>